# quakeml types
INSTALL(
FILES
	quakeml_types.xsd
DESTINATION
	${SC3_PACKAGE_SHARE_DIR}/xml
)

# 0.3
INSTALL(
FILES
	0.3/sc3ml_0.3.xsd
DESTINATION
	${SC3_PACKAGE_SHARE_DIR}/xml/0.3
)

# 0.5
INSTALL(
FILES
	0.5/quakeml_types.xsd
	0.5/sc3ml_0.5.xsd
	0.5/sc3ml_0.5__quakeml_1.2.xsl
	0.5/sc3ml_0.5__quakeml_1.2-RT.xsl
DESTINATION
	${SC3_PACKAGE_SHARE_DIR}/xml/0.5
)

# 0.6
INSTALL(
FILES
	0.6/quakeml_types.xsd
	0.6/sc3ml_0.6.xsd
	0.6/sc3ml_0.6__quakeml_1.2.xsl
	0.6/sc3ml_0.6__quakeml_1.2-RT.xsl
DESTINATION
	${SC3_PACKAGE_SHARE_DIR}/xml/0.6
)

# 0.7
INSTALL(
FILES
	0.7/quakeml_types.xsd
	0.7/sc3ml_0.7.xsd
	0.7/sc3ml_0.7__quakeml_1.2.xsl
	0.7/sc3ml_0.7__quakeml_1.2-RT.xsl
	0.7/sc3ml_0.7__quakeml_1.2-RT_eewd.xsl
DESTINATION
	${SC3_PACKAGE_SHARE_DIR}/xml/0.7
)

# 0.8
INSTALL(
FILES
	0.8/quakeml_types.xsd
	0.8/sc3ml_0.8.xsd
	0.8/sc3ml_0.8__quakeml_1.2.xsl
	0.8/sc3ml_0.8__quakeml_1.2-RT.xsl
	0.8/quakeml_1.2__sc3ml_0.8.xsl
DESTINATION
	${SC3_PACKAGE_SHARE_DIR}/xml/0.8
)

# 0.9
INSTALL(
FILES
	0.9/quakeml_types.xsd
	0.9/sc3ml_0.9.xsd
	0.9/sc3ml_0.9__quakeml_1.2.xsl
	0.9/sc3ml_0.9__quakeml_1.2-RT.xsl
	0.9/quakeml_1.2__sc3ml_0.9.xsl
DESTINATION
	${SC3_PACKAGE_SHARE_DIR}/xml/0.9
)

# 0.10
INSTALL(
FILES
	0.10/sc3ml_0.10.xsd
	0.10/sc3ml_0.10__quakeml_1.2.xsl
	0.10/sc3ml_0.10__quakeml_1.2-RT.xsl
	0.10/quakeml_1.2__sc3ml_0.10.xsl
DESTINATION
	${SC3_PACKAGE_SHARE_DIR}/xml/0.10
)

# 0.11
INSTALL(
FILES
	0.11/sc3ml_0.11.xsd
	0.11/sc3ml_0.11__quakeml_1.2.xsl
	0.11/sc3ml_0.11__quakeml_1.2-RT.xsl
	0.11/quakeml_1.2__sc3ml_0.11.xsl
DESTINATION
	${SC3_PACKAGE_SHARE_DIR}/xml/0.11
)

# 0.12
INSTALL(
FILES
	0.12/sc3ml_0.12.xsd
	0.12/sc3ml_0.12__quakeml_1.2.xsl
	0.12/sc3ml_0.12__quakeml_1.2-RT.xsl
	0.12/quakeml_1.2__sc3ml_0.12.xsl
DESTINATION
	${SC3_PACKAGE_SHARE_DIR}/xml/0.12
)

# 0.13
INSTALL(
FILES
	0.13/sc3ml_0.13.xsd
	0.13/sc3ml_0.13__quakeml_1.2.xsl
	0.13/sc3ml_0.13__quakeml_1.2-RT.xsl
	0.13/quakeml_1.2__sc3ml_0.13.xsl
DESTINATION
	${SC3_PACKAGE_SHARE_DIR}/xml/0.13
)

# 0.14
INSTALL(
FILES
	0.14/scml_0.14.xsd
	0.14/scml_0.14__quakeml_1.2.xsl
	0.14/scml_0.14__quakeml_1.2-RT.xsl
	0.14/quakeml_1.2__scml_0.14.xsl
DESTINATION
	${SC3_PACKAGE_SHARE_DIR}/xml/0.14
)
