IF (SC_GLOBAL_GUI)
	FIND_PACKAGE(Qt5 REQUIRED COMPONENTS Xml Svg)
	INCLUDE_DIRECTORIES(${Qt5Widgets_INCLUDE_DIRS})
	INCLUDE_DIRECTORIES(${Qt5Xml_INCLUDE_DIRS})
	INCLUDE_DIRECTORIES(${Qt5Svg_INCLUDE_DIRS})

	SET(NEWCONFIG_TARGET scconfig)

	SET(
		NEWCONFIG_MOC_HEADERS
			gui.h
			fancyview.h
			wizard.h
			editor.h
			panels/inspector.h
			panels/bindings.h
			panels/information.h
			panels/inventory.h
			panels/modules.h
			panels/system.h
			panels/help.h
	)

	SET(
		NEWCONFIG_RESOURCES
			icons.qrc
	)

	SET(
		NEWCONFIG_UI
			panels/inspector.ui
	)

	IF (NEWCONFIG_MOC_HEADERS)
		IF (SC_GLOBAL_GUI_QT5)
			QT5_WRAP_CPP(NEWCONFIG_MOC_SOURCES ${NEWCONFIG_MOC_HEADERS} OPTIONS -DBOOST_TT_HAS_OPERATOR_HPP_INCLUDED)
		ENDIF ()
	ENDIF (NEWCONFIG_MOC_HEADERS)

	IF (NEWCONFIG_UI)
		IF (SC_GLOBAL_GUI_QT5)
			QT5_WRAP_UI(NEWCONFIG_UI_HEADERS ${NEWCONFIG_UI})
		ENDIF ()
		INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
		INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
	ENDIF (NEWCONFIG_UI)

	IF (NEWCONFIG_RESOURCES)
		IF (SC_GLOBAL_GUI_QT5)
			QT5_ADD_RESOURCES(NEWCONFIG_RESOURCE_SOURCES ${NEWCONFIG_RESOURCES})
		ENDIF ()
	ENDIF (NEWCONFIG_RESOURCES)

	SET(
		NEWCONFIG_SOURCES
			main.cpp
			gui.cpp
			fancyview.cpp
			wizard.cpp
			editor.cpp
			${SC3_PACKAGE_SOURCE_DIR}/libs/seiscomp/gui/core/flowlayout.cpp
			panels/inspector.cpp
			panels/bindings.cpp
			panels/information.cpp
			panels/inventory.cpp
			panels/modules.cpp
			panels/system.cpp
			panels/help.cpp
			${NEWCONFIG_MOC_SOURCES}
			${NEWCONFIG_RESOURCE_SOURCES}
			${NEWCONFIG_UI_HEADERS}
	)


	SC_ADD_EXECUTABLE(NEWCONFIG ${NEWCONFIG_TARGET})
	SC_LINK_LIBRARIES_INTERNAL(${NEWCONFIG_TARGET} core)

	IF (SC_GLOBAL_GUI_QT5)
		SC_LINK_LIBRARIES(${NEWCONFIG_TARGET} Qt5::Widgets Qt5::Svg)
	ELSE ()
		SC_LINK_LIBRARIES(${NEWCONFIG_TARGET} ${QT_LIBRARIES} ${QT_QTSVG_LIBRARY})
	ENDIF ()

	INSTALL(FILES data/README DESTINATION ${SC3_PACKAGE_APP_CONFIG_DIR}/inventory)
ENDIF (SC_GLOBAL_GUI)
