IF (SC_GLOBAL_GUI)
	IF (SC_GLOBAL_GUI_QT5)
		FIND_PACKAGE(Qt5 REQUIRED COMPONENTS Network Xml Svg)
		INCLUDE_DIRECTORIES(${Qt5Widgets_INCLUDE_DIRS})
		INCLUDE_DIRECTORIES(${Qt5Network_INCLUDE_DIRS})
		INCLUDE_DIRECTORIES(${Qt5Xml_INCLUDE_DIRS})
		INCLUDE_DIRECTORIES(${Qt5Svg_INCLUDE_DIRS})
	ELSEIF (SC_GLOBAL_GUI_QT6)
		FIND_PACKAGE(Qt6 REQUIRED COMPONENTS Network Xml Svg)
		INCLUDE_DIRECTORIES(${Qt6Widgets_INCLUDE_DIRS})
		INCLUDE_DIRECTORIES(${Qt6Network_INCLUDE_DIRS})
		INCLUDE_DIRECTORIES(${Qt6Xml_INCLUDE_DIRS})
		INCLUDE_DIRECTORIES(${Qt6Svg_INCLUDE_DIRS})
	ENDIF()

	SET(SCCONFIG_TARGET scconfig)

	SET(
		SCCONFIG_MOC_HEADERS
			about.h
			gui.h
			http.h
			fancyview.h
			searchwidget.h
			wizard.h
			editor.h
			dialogs/importfdsnws.h
			panels/inspector.h
			panels/bindings.h
			panels/information.h
			panels/inventory.h
			panels/modules.h
			panels/system.h
			panels/help.h
	)

	SET(
		SCCONFIG_RESOURCES
			icons.qrc
	)

	SET(
		SCCONFIG_UI
			about.ui
			dialogs/importfdsnws.ui
			dialogs/importfdsnws_sidebar.ui
			panels/inspector.ui
	)

	IF (SCCONFIG_MOC_HEADERS)
		IF (SC_GLOBAL_GUI_QT5)
			QT5_WRAP_CPP(SCCONFIG_MOC_SOURCES ${SCCONFIG_MOC_HEADERS} OPTIONS -DBOOST_TT_HAS_OPERATOR_HPP_INCLUDED)
		ELSEIF (SC_GLOBAL_GUI_QT6)
			QT6_WRAP_CPP(SCCONFIG_MOC_SOURCES ${SCCONFIG_MOC_HEADERS} OPTIONS -DBOOST_TT_HAS_OPERATOR_HPP_INCLUDED)
		ENDIF ()
	ENDIF (SCCONFIG_MOC_HEADERS)

	IF (SCCONFIG_UI)
		IF (SC_GLOBAL_GUI_QT5)
			QT5_WRAP_UI(SCCONFIG_UI_HEADERS ${SCCONFIG_UI})
		ELSEIF (SC_GLOBAL_GUI_QT6)
			QT6_WRAP_UI(SCCONFIG_UI_HEADERS ${SCCONFIG_UI})
		ENDIF ()
		INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
		INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
	ENDIF (SCCONFIG_UI)

	IF (SCCONFIG_RESOURCES)
		IF (SC_GLOBAL_GUI_QT5)
			QT5_ADD_RESOURCES(SCCONFIG_RESOURCE_SOURCES ${SCCONFIG_RESOURCES})
		ELSEIF (SC_GLOBAL_GUI_QT6)
			QT6_ADD_RESOURCES(SCCONFIG_RESOURCE_SOURCES ${SCCONFIG_RESOURCES})
		ENDIF ()
	ENDIF (SCCONFIG_RESOURCES)

	SET(
		SCCONFIG_SOURCES
			main.cpp
			about.cpp
			avatar.cpp
			configurator.cpp
			editor.cpp
			fancyview.cpp
			http.cpp
			icon.cpp
			searchwidget.cpp
			wizard.cpp
			${SC3_PACKAGE_SOURCE_DIR}/libs/seiscomp/gui/core/flowlayout.cpp
			dialogs/importfdsnws.cpp
			panels/inspector.cpp
			panels/bindings.cpp
			panels/information.cpp
			panels/inventory.cpp
			panels/modules.cpp
			panels/system.cpp
			panels/help.cpp
			${SCCONFIG_MOC_SOURCES}
			${SCCONFIG_RESOURCE_SOURCES}
			${SCCONFIG_UI_HEADERS}
	)


	SC_ADD_EXECUTABLE(SCCONFIG ${SCCONFIG_TARGET})
	SC_LINK_LIBRARIES_INTERNAL(${SCCONFIG_TARGET} core)

	IF (SC_GLOBAL_GUI_QT5)
		SC_LINK_LIBRARIES(${SCCONFIG_TARGET} Qt5::Widgets Qt5::Network Qt5::Svg)
	ELSEIF (SC_GLOBAL_GUI_QT6)
		SC_LINK_LIBRARIES(${SCCONFIG_TARGET} Qt6::Widgets Qt6::Network Qt6::Svg)
	ENDIF ()

	INSTALL(FILES data/README DESTINATION ${SC3_PACKAGE_APP_CONFIG_DIR}/inventory)
ENDIF (SC_GLOBAL_GUI)
