SET(PACKAGE_NAME SCWFAS)
SET(APP_NAME scwfas)

SET(
	${PACKAGE_NAME}_SOURCES
		main.cpp
		app.cpp
		server.cpp
		session.cpp
		settings.cpp
		fdsnws.cpp
)


INCLUDE_DIRECTORIES(${LIBMSEED_INCLUDE_DIR})
SC_INSTALL_INIT(${APP_NAME} ../../templates/initd.py)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})

SC_ADD_EXECUTABLE(${PACKAGE_NAME} ${APP_NAME})
SC_ADD_VERSION(${PACKAGE_NAME} ${APP_NAME})
SC_LINK_LIBRARIES_INTERNAL(${APP_NAME} client)
