INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/core)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/datamodel)

SET(GUI_HEADERS "")
SET(GUI_SOURCES "")

SC_ADD_GUI_SUBDIR_SOURCES(GUI core)
SC_ADD_GUI_SUBDIR_SOURCES(GUI datamodel)
SC_ADD_GUI_SUBDIR_SOURCES(GUI plot)
SC_ADD_GUI_SUBDIR_SOURCES(GUI map)

SET(PROJECT_API_H qt4.h)
SET(GUI_HEADERS "")
SC_ADD_GUI_LIBRARY(GUI qt4)

SET(GUI_MOC_HEADERS "")
SET(GUI_UI_HEADERS "")
SC_LIB_INSTALL_HEADERS(GUI)

IF (SC_GLOBAL_GUI_QT5)
	FIND_PACKAGE(Qt5 COMPONENTS Xml)
	INCLUDE_DIRECTORIES(${Qt5Xml_INCLUDE_DIRS})
	SC_LIB_LINK_LIBRARIES(qt4 Qt5::Xml ${OPENSSL_LIBRARIES})
ELSE()
	INCLUDE_DIRECTORIES(${QT_QTXML_INCLUDE_DIR})
	SC_LIB_LINK_LIBRARIES(qt4 ${QT_QTXML_LIBRARY_RELEASE} ${OPENSSL_LIBRARIES})
ENDIF()

SC_LIB_LINK_LIBRARIES_INTERNAL(qt4 client)

IF(MACOSX)
	SET_TARGET_PROPERTIES(seiscomp_qt4 PROPERTIES LINK_FLAGS -Wl,-framework,Cocoa)
ENDIF()
