SET(PACKAGE_NAME STDLOC)

SET(LEASTSQUARES_DIR ${THIRD_PARTY_DIRECTORY}/leastsquares)

INCLUDE_DIRECTORIES(${LEASTSQUARES_DIR})

SET(${PACKAGE_NAME}_SOURCES
	${LEASTSQUARES_DIR}/lsmr.cpp
	${LEASTSQUARES_DIR}/lsqr.cpp
	${LEASTSQUARES_DIR}/solver.h
	stdloc.cpp
)

SC_ADD_PLUGIN_LIBRARY(${PACKAGE_NAME} stdloc "")
SC_LINK_LIBRARIES_INTERNAL(stdloc core)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
