SET(STYLE_CSS style.css)

FIND_PROGRAM(SASS_EXECUTABLE sass)

IF(SASS_EXECUTABLE)
	#SET(SASS_INCLUDE_DIRECTORY ${CMAKE_SOURCE_DIR}/doc/base/sass)
	# Generate css
	ADD_CUSTOM_COMMAND(
		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
		OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/${STYLE_CSS}
		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/sass/*.scss
		COMMAND ${SASS_EXECUTABLE}
		ARGS -s compressed sass/style.scss ${STYLE_CSS}
	)

	ADD_CUSTOM_TARGET(
		assets ALL DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${STYLE_CSS}
	)
ENDIF(SASS_EXECUTABLE)

# Install assets
INSTALL(
	FILES
		index.html
		favicon.ico
		gempa.svg
		${STYLE_CSS}
	DESTINATION
		${SC3_PACKAGE_SHARE_DIR}/${WIRED_APP_TARGET}/http
)

INSTALL(
	DIRECTORY
		fonts/.
	DESTINATION
		${SC3_PACKAGE_SHARE_DIR}/${WIRED_APP_TARGET}/http/fonts
)

INSTALL(
	DIRECTORY
		assets/.
	DESTINATION
		${SC3_PACKAGE_SHARE_DIR}/${WIRED_APP_TARGET}/http/assets
)
